cluster/apps/networking/traefik-error-pages/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-error-pages
  namespace: networking
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: traefik-error-pages
